infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: aramzakaryan/auth

---

apiVersion: v1
kind: Service
metadata:
  name: auth-node-port-srv
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - port: 4001
      targetPort: 4001
      nodePort: 30001

---

apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 4001
      targetPort: 4001
