infra/k8s/auth-mongo-depl.yaml
# auth-mongo-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongol-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: auth-node-port-srv
spec:
  type: NodePort
  selector:
    app: auth-mongo
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30171

---

apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-cluster-ip-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
