infra/k8s/ingress-srv.yaml
# ingress-srv.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip-srv
                port:
                  number: 4001
#          - path: /posts/?(.*)/comments
#            backend:
#              service:
#                name: comments-cluster-ip-srv
#                port:
#                  number: 4002
#            pathType: ImplementationSpecific
#          - path: /posts
#            backend:
#              service:
#                name: posts-cluster-ip-srv
#                port:
#                  number: 4001
#            pathType: Prefix
